Upgrades to Roboguice 4.0.0 Also replaces the Stream API with Observables