@@ -1,17 +1,16 @@
 package com.kelsos.mbrc.mappers;
 
 import android.support.annotation.NonNull;
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
 import com.kelsos.mbrc.dao.GenreDao;
 import com.kelsos.mbrc.domain.Genre;
 import com.kelsos.mbrc.dto.library.GenreDto;
 import java.util.List;
+import rx.Observable;
 
 public class GenreMapper {
 
   public static List<GenreDao> map(List<GenreDto> data) {
-    return Stream.of(data).map(GenreMapper::map).collect(Collectors.toList());
+    return Observable.from(data).map(GenreMapper::map).toList().toBlocking().first();
   }
 
   public static GenreDao map(GenreDto dto) {
@@ -25,7 +24,7 @@ public class GenreMapper {
   }
 
   public static List<Genre> mapToModel(List<GenreDao> genres) {
-    return Stream.of(genres).map(GenreMapper::mapToModel).collect(Collectors.toList());
+    return Observable.from(genres).map(GenreMapper::mapToModel).toList().toBlocking().first();
   }
 
   @NonNull public static Genre mapToModel(GenreDao dao) {
