@@ -1,14 +1,13 @@
 package com.kelsos.mbrc.mappers;
 
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
 import com.kelsos.mbrc.dao.PlaylistTrackInfoDao;
 import com.kelsos.mbrc.dto.playlist.PlaylistTrackInfo;
 import java.util.List;
+import rx.Observable;
 
 public class PlaylistTrackInfoMapper {
   public static List<PlaylistTrackInfoDao> map(List<PlaylistTrackInfo> info) {
-    return Stream.of(info).map(PlaylistTrackInfoMapper::map).collect(Collectors.toList());
+    return Observable.from(info).map(PlaylistTrackInfoMapper::map).toList().toBlocking().first();
   }
 
   public static PlaylistTrackInfoDao map(PlaylistTrackInfo object) {
