@@ -1,10 +1,9 @@
 package com.kelsos.mbrc.mappers;
 
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
 import com.kelsos.mbrc.dao.views.TrackModelView;
 import com.kelsos.mbrc.domain.Track;
 import java.util.List;
+import rx.Observable;
 
 public class TrackMapper {
   public static Track map(TrackModelView view) {
@@ -12,6 +11,6 @@ public class TrackMapper {
   }
 
   public static List<Track> map(List<TrackModelView> dao) {
-    return Stream.of(dao).map(TrackMapper::map).collect(Collectors.toList());
+    return Observable.from(dao).map(TrackMapper::map).toList().toBlocking().first();
   }
 }
